# folio-user-permission-mapper

./: .env  .gitignore  Dockerfile  README.md  pyproject.toml
src/: cli.py
src/dto/: models.py
src/folio_upm/: cli.py
src/folio_upm/dto/: capability_type.py  clean_up.py  cleanup.py  errors.py  eureka.py  migration.py  models.py  okapi.py  permission_type.py  results.py  source_type.py  strategy_type.py  support.py
src/folio_upm/integration/clients/: eureka_client.py  login_client.py  okapi_client.py  permissions_client.py
src/folio_upm/integration/services/: eureka_cleanup_service.py  eureka_migration_service.py  eureka_service.py  extra_permission_set_data_provider.py  login_service.py  okapi_service.py  (+7 more)
src/folio_upm/integrations/: eureka_client.py  eureka_http_client.py  http_client.py  login_client.py  okapi_client.py  okapi_http_client.py  permissions_client.py  s3_client.py
src/folio_upm/services/: analysis_service.py  capabilities_loader.py  capability_service.py  eureka_hash_role_analyzer.py  eureka_service.py  extra_permissions_service.py  graph_service.py  load_result_analyzer.py  login_service.py  okapi_service.py  permission_analyzer.py  permission_loader.py  permission_processor.py  permission_service.py  ps_details_service.py  questionable_ps_validator.py  role_capabilities_provider.py  role_provider.py  roles_provider.py  user_roles_provider.py  xlsx_generator.py  xlsx_service.py
src/folio_upm/storage/: local_tenant_storage.py  s3_client.py  s3_storage.py  s3_tenant_storage.py  tenant_storage.py  tenant_storage_service.py
src/folio_upm/utils/: common_utils.py  cql.py  cql_query_utils.py  env.py  file_utils.py  iterable_utils.py  json_utils.py  loading_utils.py  log_factory.py  ordered_set.py  roles_verifier.py  service_utils.py  sub_ps_helper.py  system_roles_provider.py  upm_env.py  utils.py  xlsx_utils.py
src/folio_upm/xlsx/: abstract_report_provider.py  abstract_result_service.py  abstract_ws.py  cleanup_process_report_service.py  cleanup_result_service.py  constants.py  eureka_report_provider.py  eureka_xlsx_report_provider.py  excel_generator.py  excel_result_generator.py  hash_role_report_provider.py  migration_process_report_provider.py  migration_result_service.py  okapi_analysis_report_provider.py  permission_result_service.py  ps_xlsx_report_provider.py  ws_constants.py  xlsx_report_provider.py
src/folio_upm_resource/: __init__.py
src/integrations/: eureka_client.py  login_client.py  okapi_client.py  permissions_client.py  s3_client.py
src/resources/role-length-test-data/: sample-payload.json  test_private_key.pem  test_public_key.pem
src/services/: analysis_service.py  eureka_service.py  graph_service.py  login_service.py  okapi_service.py  permission_loader.py  permission_service.py  xlsx_service.py  xslx_service.py
src/utils/: env.py  json_utils.py  log_factory.py
tests/: assert_utils.py  conftest.py  minio_test_helper.py  wiremock_test_helper.py
tests/folio_upm/: test_analyze_hash_roles_command.py  test_cleanup_hash_roles_command.py  test_collect_capabilities_command.py  test_collect_permissions_command.py  test_generate_cleanup_report_command.py  test_generate_migration_report_command.py  test_generate_report_command.py  test_it_collect_permissions.py  test_run_eureka_migration_command.py
tests/folio_upm/services/: test_analysis_service.py  test_extra_permissions_resolver.py  test_load_result_analyzer.py
tests/folio_upm/utils/: test_common_utils.py  test_file_utils.py  test_orderer_set.py  test_roles_verifier.py  test_sub_ps_helper.py
tests/resources/okapi/: 0--1user-1ps.json  0users-permission-set.json  12--0users-permission-set.json  1user-1ps-extra-edit-permissions.json  1user-1ps-extra-permissions.json  1user-1ps-extra-view-permissions.json  1user-1ps.json  1user-nested-ps.json  2--2user-1ps.json  2user-1ps.json  2user-2ps.json  3user-many-ps+shared-ps.json  4--3user-many-ps+shared-ps.json  5--simple-nesting.json  8--circular-references.json  9--duplicates-at-different-levels.json  circular-references.json  deep-nesting.json  duplicates-at-different-levels.json  empty-ps-in-middle.json  mixed-role-feature-assignment.json  permission+permission-sets.json
tests/resources/test-data/: eureka-capabilities.json  eureka-cleanup-report.json  eureka-migration-data.json  eureka-migration-report.json  hash-roles-cleanup-data.json  okapi-permissions.json
tests/utils/: json_stub_loader.py
(+183 files in other folders)
