[tool.poetry]
name = "folio-user-permission-mapper"
version = "0.1.0"
description = ""
authors = ["Pavel Filippov <pavel_filippov@epam.com>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [{ include = "folio_upm", from = "src" }]

[tool.poetry.scripts]
folio-permission-migration-cli = "folio_upm.cli:cli"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.40.23"
dotenv = "^0.9.9"
requests = "^2.32.5"
poetry-core = "^2.1.3"
click = "^8.2.1"
openpyxl = "^3.1.5"
pydantic = "^2.11.7"
cachetools = "^6.2.0"
cryptography = "^45.0.7"
pyjwt = "^2.10.1"
mypy-boto3-s3 = "^1.40.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
flake8-bugbear = "^24.12.12"
black = "^25.1.0"
isort = "^6.0.1"
pytest = "^8.4.1"
types-cachetools = "^6.0.0.20250525"
types-click = "^7.1.8"
boto3-stubs = "^1.40.7"
pyrefly = "^0.27.2"
types-openpyxl = "^3.1.5.20250602"
testcontainers = {extras = ["minio"], version = "^4.12.0"}
wiremock = "^2.7.0"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120

[tool.pytest.ini_options]
addopts = "-ra --tb=short --assert plain"
log_cli = true
log_cli_level = "DEBUG"
log_format = "[%(asctime)s] [%(levelname)-8s] [%(name)-40s] %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = ['**/*venv/**\*', '**/tmp/**\*']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
